# riot_server_cpp

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  riot_server_cpp.kdev4
clients/javascript/: README.md  riot-simple-interface.html  riot.js
clients/nodemcu/temp_sensor/: init.lua
clients/nodemcu/window_sensor/: init.lua
clients/nodemcu/windows_server/: init.lua
examples/: CMakeLists.txt  example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp
include/riot/: constants.hpp  defs.hpp  error_codes.hpp
include/riot/mpl/: filtered_overload.hpp  is_callable.hpp  is_specialization.hpp  overload.hpp
include/riot/server/: artifacts.hpp  asio_helpers.hpp  connection_base.hpp  lua_interface.hpp  security_actions.hpp  server_artifacts.hpp
include/riot/server/connection_managers/: simple_connection_manager.hpp
include/riot/server/parsers/: command.hpp  command_parser.hpp  header.hpp  header_parser.hpp  sfe.hpp  sfe_parser.hpp
include/riot/server/parsers/detail/: begin.hpp  end.hpp
include/riot/server/servers/: simple_tcp_ip.hpp  simple_ws.hpp  tcp_ip.hpp  ws.hpp
include/riot/server/simple/: connection_manager.hpp  simple.hpp  tcp_ip.hpp  ws.hpp
include/riot/server/specialized/: connection_manager.hpp
include/riot/server/specialized/utils/: external_auth.hpp
sample_nodes/: node01.txt  node02.txt  node03.txt  node04.txt
scripts/: README  travis-before_script.sh  travis-script.sh  update-sol.sh
src/: main.cpp  parsers.cpp
tests/: CMakeLists.txt  test_mpl.cpp  test_sfep.cpp
tests/test_sfep_data/: comparisons.txt  negatives.txt
